<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catamount Characters</string>
    <string name="choose_one">Choose one character</string>
    <string name="choose_two">Choose two characters</string>
    <string name="alpha_one">Enter one alpha numeric character</string>
    <string name="alpha_two">Enter two alpha numeric characters</string>
    <string name="type">Type character</string>
    <string name="type1">Type character 1</string>
    <string name="type2">Type character 2</string>
    <string name="go_button">Go</string>
    <string name="choose_image">Choose Image</string>
    <string name="science">Science</string>
    <string name="catamount">Catamount</string>
    <string name="characters">Characters</string>
    <string name="info">Info</string>
    <string name="tower">Tower</string>
    <string name="computer">Computer</string>
    <string name="year">2013</string>
    <string name="developed_by">Developed By</string>
    <string name="developer_name">Jeremiah Griffin</string>
    <string name="email_address">eighthgriffin@gmail.com</string>
    <string name="developer_email">Email Address</string>
    <string name="developer_website">Website</string>
    <string name="website_address">agora.cs.wcu.edu/~jtgriffin1</string>
    <string name="one_letter">1 Letter</string>
    <string name="two_letters">2 Letters</string>
    <string name="image">Image</string>
    <string name="main_menu">Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_one">ChooseOne</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_two">ChooseTwo</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_one_character">OneCharacter</string>
    <string name="title_activity_two_character">TwoCharacter</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
