<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremiah.catamountcharacters.Image"
    android:background="@color/catamount_purple">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catamount"
            android:id="@+id/catamount_button"
            android:layout_weight="0.05"
            android:textColor="@color/catamount_gold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tower"
            android:id="@+id/tower_button"
            android:layout_weight="0.05"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="@color/catamount_gold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:id="@+id/computer_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"
            android:textColor="@color/catamount_gold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:id="@+id/science_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"
            android:textColor="@color/catamount_gold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:id="@+id/year_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"
            android:textColor="@color/catamount_gold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/choose_image"
        android:id="@+id/image_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/catamount_gold" />
</RelativeLayout>
