<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/catamount_purple"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/one_letter"
            android:id="@+id/one_letter"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffc1a875" />

        <Button
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/two_letters"
            android:id="@+id/two_letters"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffc1a875" />

        <Button
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:id="@+id/image_button"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffc1a875" />

        <Button
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_button"
            android:layout_gravity="right"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_info"
            android:nestedScrollingEnabled="true"
            android:onClick="onClick"
            android:text="@string/info"
            android:textColor="#ffc1a875" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu"
        android:id="@+id/main_menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:textColor="#ffffffff" />
</LinearLayout>
