<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremiah.catamountcharacters.Info"
    android:background="@color/catamount_purple">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="204dp"
            android:layout_height="204dp"
            android:id="@+id/info_image"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/ic_about" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="264dp"
            android:layout_gravity="center_horizontal|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/developed_by"
                android:id="@+id/developer_name"
                android:layout_gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/developer_name"
                android:id="@+id/info_page_name"
                android:layout_gravity="left|bottom"
                android:layout_below="@+id/developer_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="5dp"
                android:textColor="#ffc1a875" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/developer_email"
                android:id="@+id/info_email_text"
                android:layout_below="@+id/info_page_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_address"
                android:id="@+id/info_email"
                android:layout_below="@+id/info_email_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="5dp"
                android:textColor="#ffc1a875" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/developer_website"
                android:id="@+id/info_website"
                android:layout_below="@+id/info_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/website_address"
                android:id="@+id/website_address"
                android:layout_below="@+id/info_website"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="5dp"
                android:textColor="#ffc1a875" />
        </RelativeLayout>

    </FrameLayout>
</RelativeLayout>
