<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremiah.catamountcharacters.ChooseOne"
    android:background="@color/catamount_purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_one"
        android:id="@+id/choose_one"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="@color/catamount_gold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alpha_one"
        android:id="@+id/textView"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/choose_one"
        android:layout_centerHorizontal="true"
        android:textColor="@color/catamount_gold" />
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/type"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/choose_one"
        android:layout_alignStart="@+id/choose_one"
        android:layout_marginTop="52dp"
        android:textColor="#ffffffff" />
    -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one_char"
        android:background="#fffffdfd"
        android:lines="1"
        android:hint="Type Character"
        android:textColorHint="#ffaeaeae"
        android:layout_alignRight="@+id/choose_one"
        android:layout_alignEnd="@+id/choose_one"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/choose_one"
        android:layout_alignStart="@+id/choose_one"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/button_go1"
        android:layout_below="@+id/one_char"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:onClick="onClick" />
</RelativeLayout>
