<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremiah.catamountcharacters.ChooseTwo"
    android:background="@color/catamount_purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/choose_two"
        android:id="@+id/choose_two_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/catamount_gold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alpha_two"
        android:id="@+id/enter_two_alpha"
        android:paddingTop="5dp"
        android:textColor="@color/catamount_gold"
        android:layout_below="@+id/choose_two_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_char_a"
        android:layout_alignRight="@+id/choose_two_title"
        android:layout_alignEnd="@+id/choose_two_title"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignLeft="@+id/choose_two_title"
        android:layout_alignStart="@+id/enter_two_alpha"
        android:layout_toEndOf="@id/enter_two_alpha"
        android:layout_below="@+id/enter_two_alpha"
        android:background="#ffffffff"
        android:layout_marginTop="30dp"
        android:hint="Type Character"
        android:singleLine="true"
        android:maxLength="1"
        android:maxLines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_char_b"
        android:layout_alignRight="@+id/enter_char_a"
        android:layout_alignEnd="@+id/enter_char_a"
        android:layout_below="@+id/enter_char_a"
        android:layout_alignLeft="@+id/enter_char_a"
        android:layout_alignStart="@+id/enter_char_a"
        android:background="#ffffffff"
        android:layout_marginTop="20dp"
        android:hint="Type Character"
        android:singleLine="true"
        android:maxLength="1"
        android:maxLines="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/button_go2"
        android:layout_marginTop="144dp"
        android:layout_below="@+id/enter_char_b"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:layout_alignParentEnd="false" />

    <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type1"
            android:id="@+id/textView1char"
            android:layout_below="@+id/enter_two_alpha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp" />
    -->
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/type2"
        android:id="@+id/textView2char"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/type_1_char"
        android:layout_alignStart="@+id/type_1_char" />
-->

</RelativeLayout>
